--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.32.0
 pydantic[email]==2.9.2
 pydantic-settings==2.6.1
 python-dotenv==1.0.1
+python-multipart==0.0.9
 httpx==0.25.2
 SQLAlchemy==2.0.36
 alembic==1.13.3
