--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,8 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app ./app
+# Copier les scripts pour les tests
+COPY scripts ./scripts
 
 ENV PYTHONUNBUFFERED=1
 
