--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.7.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.11",
@@ -21,4 +23,3 @@
     "vite": "^5.4.8"
   }
 }
-
