--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,10 +7,11 @@ python-multipart==0.0.9
 httpx==0.27.2
 SQLAlchemy==2.0.36
 alembic==1.13.3
-psycopg2-binary==2.9.9
+psycopg[binary]>=3.2.0
 python-jose==3.3.0
 passlib[bcrypt]==1.7.4
 apscheduler==3.10.4
 supabase==2.11.0
 prometheus-fastapi-instrumentator==6.1.0
+playwright==1.48.0
 
